# rust-euler

./: Cargo.toml  LICENSE  README.md
src/: 1.rs  4.rs  primes.rs
