[package]
name = "rust_euler"
version = "0.1.0"
edition = "2018"
authors = ["shmuel <shmuelhanoch@gmail.com>"]
license = "MIT"
repository = "git@github.com:shmuelhanoch/rust-euler.git"
description = """
Solving Project-Euler problems using the Rust language.
"""

[dependencies]
itertools = "0.7.8"
mdo = "*"
num = "0.4"
tupletools = "0.3.0"
